# spherical-harmonic

./: .gitignore  .gitmodules  CMakeLists.txt  CliInput.h  CubeMap.h  CubeMapPolarFunction.h  PixelArray.h  README.md  main.cpp  math.h  pixel_format.h  sampling.h  spherical_harmonic.h  utils.h
decode/: CMakeLists.txt  encoded.json  main.cpp
decode/test/: sh-rgb.json  test-rgba.bat  test-write.bat
encode/: CMakeLists.txt  main.cpp  run.bat
encode/test/: test-cubemap.bat  test-monte-carlo.bat  test-spherical.bat
src/: CliInput.h  CubeMap.h  CubeMapPolarFunction.h  PixelArray.h  math.h  pixel_format.h  real.h  sampling.h  sh.h  shmath.h  spherical_harmonic.h  utils.h
